Reseting user password with provided password reset token
